views: home + login + create

--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -5,8 +5,12 @@
 
 <section id="home">
  
-  <button>login</button>
-  <button>register</button>
+  <button id="buttonLogin">
+    <a href="@routes.HomeController.login()">
+      login
+    </a>
+  </button>
+  <button id="buttonRegister">register</button>
 </section>
 }
 }
