--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,6 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/main.css")'>
     <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/home.css")'>
+    <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/login.css")'>
+    <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/create.css")'>
     <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/prism.css")'>
     <link rel="shortcut icon" type="image/png" href='@routes.Assets.versioned("images/favicon.png")'>
     <script src='@routes.Assets.versioned("javascripts/hello.js")' type="text/javascript"></script>
